# Anycubic-Photon-decreasePixel-with-GUI

./: CMakeLists.txt  README.md  decreasePixel.pro  fileutils.cpp  fileutils.h  graphicswidget.cpp  graphicswidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  photonfile.cpp  photonfile.h
